# grading-helper-service

./: .env.example  .gitignore  .pre-commit-config.yaml  .samignore  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  template.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ci.yml
api/: index.html
app/: __init__.py  config.py  database.py  main.py  models.py
architecture/: index.html
config/: config.yaml  prompts.yaml
data-models/: index.html
data/samples/: example_submission.json
decisions/: index.html
deployment/: index.html
development/: index.html
docs/: index.md  setup.md
docs/api/: index.md
docs/architecture/: index.md
docs/data-models/: index.md
docs/decisions/: index.md
docs/deployment/: index.md
docs/development/: index.md
docs/evaluation/: index.md
docs/getting-started/: start_here.md
docs/guides/: index.md  local-setup.md  running-tests.md
docs/lti-integration/: index.md
docs/reference/: index.md
evaluation/: README.md  index.html  llm_grading_evaluation.ipynb  paper.docx
feedback_analysis/: feedback_analysis.ipynb
getting-started/start_here/: index.html
guides/: index.html
guides/local-setup/: index.html
guides/running-tests/: index.html
lti-integration/: index.html
notebooks/: exploratory.ipynb
reference/: index.html
scripts/: list_available_models.py  test_grading.py
search/: search_index.json
src/: __init__.py
src/api/: app.py
src/auth/: session.py
src/core/: __init__.py  aws.py  bedrock_client.py  config.py  grade_engine.py
src/handlers/: api.py
src/lti/: ags.py  canvas_api.py  jwt_validation.py  key_manager.py  launch_store.py  oauth.py  routes.py  state.py  ui.py
src/models/: __init__.py  canvas.py  grading_job.py  submission.py
src/repositories/: README.md  __init__.py  grading_job.py  submission.py
tests/: README.md  conftest.py  test_grading_service.py  test_health.py  test_ingestion.py  test_jobs_api.py  test_lti_adapter.py  test_lti_ags.py  test_lti_canvas_api.py  test_lti_launch_store.py  test_lti_oauth.py  test_lti_routes.py  test_lti_ui.py  test_models.py  test_repositories.py  test_session_auth.py
(+6 files in other folders)
