[project]
name = "grading-helper-service"
version = "0.1.0"
description = "AI-powered grading assistant for UBC Forestry courses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.23",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Templates
    "jinja2>=3.1.0",
    # Forms
    "python-multipart>=0.0.20",
    # HTTP client for Canvas API
    "httpx>=0.28.0",
    # AWS Bedrock
    "boto3>=1.35.0",
    # Settings management
    "pydantic-settings>=2.7.0",
    # LTI 1.3 (added later, but including now)
    "pylti1p3>=2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
