[project]
name = "grading-helper-service"
version = "0.1.0"
description = "AI-powered grading assistant for UBC Forestry courses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "mangum>=0.19",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aws-lambda-powertools>=2.30",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.4",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "pytest>=8.0",
    "httpx>=0.26",
    "moto>=5.0",
    "mkdocs-material>=9.6.23",
]
